--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,css,scss,html}\""
   },
   "dependencies": {
-    "clsx": "^2.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
