--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,css,scss,html}\"",
-    "prepare": "git config core.hooksPath .git-hooks || echo 'Not in a git repo'"
+    "prepare": "git config core.hooksPath .git-hooks || echo 'Not in a git repo'",
+    "check:fsd": "npx steiger ./src"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.1",
