--- a/package.json
+++ b/package.json
@@ -12,32 +12,33 @@
     "check:fsd": "npx steiger ./src"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "chart.js": "^4.4.6",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "next": "15.1.2",
-    "react": "^18",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.3.0",
+    "next": "15.2.2",
+    "react": "^19",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.4.7"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8.4.33",
-    "prettier": "3.2.4",
-    "sass": "^1.69.5",
+    "@tailwindcss/postcss": "^4.0.13",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.2",
+    "postcss": "^8.5.3",
+    "prettier": "3.5.3",
+    "sass": "^1.85.1",
     "steiger": "^0.5.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.3"
+    "tailwindcss": "^4.0.13",
+    "typescript": "^5.8.2"
   }
 }
