--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,21 @@ services:
       - /usr/src/app/node_modules
       - /usr/src/app/.next
     ports:
-      - "3000:3000"
+      - '3000:3000'
+
+  db:
+    image: mongo:latest
+    container_name: mongodb
+    ports:
+      - '27017:27017'
+    volumes:
+      - mongodb_data:/var/lib/mongodb/data
+    restart: unless-stopped
 
 networks:
   pomodoro:
     name: pomodoro
     driver: bridge
+
+volumes:
+  mongodb_data:
