--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check:fsd": "npx steiger ./src"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.1.6",
@@ -19,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "15.2.2",
+    "prisma": "^6.5.0",
     "react": "^19",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19",
