--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ services:
   client:
     build:
       context: ./
-    volumes:
-      - ./:/usr/src/app
-      - /usr/src/app/node_modules
-      - /usr/src/app/.next
     ports:
       - '3000:3000'
+    environment:
+      - NODE_ENV=production
+      - DATABASE_URL=mongodb://mongodb:27017/pomodoro
+    depends_on:
+      - db
 
   db:
     image: mongo:latest
@@ -15,7 +16,7 @@ services:
     ports:
       - '27017:27017'
     volumes:
-      - mongodb_data:/var/lib/mongodb/data
+      - mongodb_data:/data/db
     restart: unless-stopped
 
 networks:
