--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,14 @@
 services:
   db:
-    image: mongo:latest
-    container_name: mongodb_dev
+    image: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
     ports:
-      - '27017:27017'
+      - '5432:5432'
     volumes:
-      - mongodb_data_dev:/data/db
-    restart: unless-stopped
+      - pgdata:/var/lib/postgresql/data
     networks:
       - pomodoro_dev
 
@@ -16,4 +18,4 @@ networks:
     driver: bridge
 
 volumes:
-  mongodb_data_dev:
+  pgdata:
