--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,22 @@ services:
       - '3000:3000'
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=mongodb://mongodb:27017/pomodoro
+      - DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres?schema=public
     depends_on:
       - db
 
   db:
-    image: mongo:latest
-    container_name: mongodb
+    image: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
     ports:
-      - '27017:27017'
+      - '5432:5432'
     volumes:
-      - mongodb_data:/data/db
-    restart: unless-stopped
+      - pgdata:/var/lib/postgresql/data
+    networks:
+      - pomodoro
 
 networks:
   pomodoro:
@@ -25,4 +29,4 @@ networks:
     driver: bridge
 
 volumes:
-  mongodb_data:
+  pgdata:
