--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^6.0.10",
     "next": "15.2.2",
-    "prisma": "^6.5.0",
     "react": "^19",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19",
     "react-hook-form": "^7.54.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
@@ -33,14 +35,17 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.13",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/socket.io": "^3.0.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
+    "prisma": "^6.5.0",
     "sass": "^1.85.1",
     "steiger": "^0.5.5",
     "tailwindcss": "^4.0.13",
