--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,css,scss,html}\"",
     "prepare": "git config core.hooksPath .git-hooks || echo 'Not in a git repo'",
-    "check:fsd": "npx steiger ./src"
+    "check:fsd": "npx steiger ./src",
+    "reset:db": "npx prisma db push --force-reset"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -27,8 +28,6 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19",
     "react-hook-form": "^7.54.2",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
