--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@reduxjs/toolkit": "^2.6.1",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
@@ -29,10 +30,10 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "zustand": "^5.0.3"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.13",
